--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -79,8 +79,8 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  /* font-family: "Abril Fatface", serif; */
+  font-size: 2.25rem;
 }
 
 /* Sidebar nav */
@@ -128,7 +128,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    max-width: 38rem;
+    max-width: 100%;
     margin-left: 20rem;
     margin-right: 2rem;
   }
@@ -138,6 +138,7 @@ a.sidebar-nav-item:focus {
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
+    max-width: 100%;
   }
 }
 
