--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -55,13 +55,14 @@ html {
 
 .sidebar {
   text-align: center;
-  padding: 2rem 1rem;
+  padding: 0.25rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
 }
 @media (min-width: 48em) {
   .sidebar {
     position: fixed;
+    padding: 2rem 1rem;
     top: 0;
     left: 0;
     bottom: 0;
@@ -76,11 +77,24 @@ html {
 }
 
 /* About section */
+
+.sidebar-about {
+  display: inline-block;
+} @media (min-width: 48em){
+  .sidebar-about {
+    display: inheirt;
+  }
+}
+
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
   /* font-family: "Abril Fatface", serif; */
-  font-size: 2.25rem;
+  font-size: 2rem;
+} @media (min-width: 48em){
+  .sidebar-about h1 {
+    font-size: 2.25rem;
+  }
 }
 
 /* Sidebar nav */
