--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/styles.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hamburgers.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
